<resources>
    <string name="app_name">PersonalTrainer</string>
    <string name="squat">Przysiad</string>
    <string name="bench">Ławka</string>
    <string name="deadlift">Martwy</string>
    <string name="max">Maks:</string>
    <string name="edit_profile">Edytuj profil</string>
    <string name="options">Opcje</string>
    <string name="back">Cofnij</string>
    <string name="log_out">Wyloguj</string>
    <string name="account_settings">Ustawienia konta</string>
    <string name="save">Zapisz</string>
    <string name="change_image">Zmień zdjęcie</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="email">E-mail</string>
    <string name="description">Opis użytkonika</string>
    <string name="logo">Logo</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj</string>
    <string name="sign_up">Utwórz konto</string>
    <string name="make_new_account">Załóż konto</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="fill_email">Uzupełnij pole z adresem e-mail</string>
    <string name="fill_username">Uzupełnij pole z nazwą użytkownika</string>
    <string name="fill_password">Uzupełnij pole z hasłem</string>
    <string name="authentification_failed">Logowanie nieudane</string>
    <string name="different_password">Hasła muszą być takie same</string>
    <string name="registration_fail">Rejestracja nie powiodła się. Adres jest zajęty lub niepoprawny.</string>
    <string name="username_exists">Użytkownik o takiej nazwie istnieje</string>
    <string name="too_short_password">Hasło jest za którkie. Wpisz minimum 6 znaków.</string>
    <string name="verification_email_error">Wysyłanie weryfikacyjnej wiadomości e-mail nie powiodło się. Skontaktuj się z administracją.</string>
    <string name="verification_email_send">Wysłasno e-mail z prośbą o weryfikację adresu</string>
    <string name="email_not_verified">Logowanie nieudane, sprawdź e-mail w celu jego weryfikacji.</string>
    <string name="cancel">Anuluj</string>
    <string name="max_before_loaded_from_db">00.00</string>
    <string name="type_number_in_maxes">Wpisz liczby w miejsce maksów</string>
    <string name="fill_all_fields">Żadne pole nie może być puste</string>
    <string name="something_went_wrong">Coś poszło nie tak...</string>
    <string name="changes_saved">Zapisano zmiany</string>
    <string name="is_already_in_use">jest w użyciu</string>
    <string name="email_changed_confirm_password">Aby zmienić adres e-mail potwierdź swoje hasło.</string>
    <string name="confirm">Zatwierdź</string>
    <string name="rest_of_data_will_be_saved">Reszta danych została zapisana.</string>
    <string name="wrong_password">Hasło błędne</string>
    <string name="email_in_use">Ten adres e-mail jest już zajęty.</string>
    <string name="email_updated">Zaktualizowano email</string>
    <string name="gallery">Galeria</string>
    <string name="camera">Kamera</string>
    <string name="lack_of_permissions">Brakuje odpowiednich zezwoleń</string>
    <string name="next">Dalej</string>
    <string name="photo_uploaded">Zdjęcie dodane</string>
    <string name="image_changed">Zdjęcie zmienione</string>
    <string name="user_plans">Plany treningowe</string>
    <string name="days_of_plan">Dni treningowe</string>
    <string name="exercises">Ćwiczenia</string>
    <string name="date">Data</string>
    <string name="name">Nazwa</string>
    <string name="reps">powtórzenia:</string>
    <string name="sets">serie:</string>
    <string name="intensity">Intensywność</string>
    <string name="weight">ciężar:</string>
    <string name="hash">#</string>
    <string name="slash">/</string>
    <string name="add_new_plan">Dodaj nowy plan</string>
    <string name="plan_name">Nazwa planu</string>
    <string name="lack_of_plan_name">Brak nazwy planu</string>
    <string name="add_new_day">Dodaj nowy dzień treningowy</string>
    <string name="day_description">Opis dnia</string>
    <string name="wrong_date_format">Zły format daty</string>
    <string name="add_new_exercise">Dodaj nowe ćwiczenie</string>
    <string name="low_bar">Low bar</string>
    <string name="low_bar_paused">Low bar pauza</string>
    <string name="bench_competition">Płaska startowa</string>
    <string name="deadlift_conventional">Martwy ciąg klasyczny</string>
    <string name="deadlift_sumo">Martwy ciąg sumo</string>
    <string name="deadlift_romanian">Rumuński martwy ciag</string>
    <string name="squat_competiton">Przysiad startowy</string>
    <string name="high_bar">High bar</string>
    <string name="high_bar_paused">High bar pauzowany</string>
    <string name="front_squat">Przysiad przedni</string>
    <string name="front_squat_paused">Przysaid przedni pauzowany</string>
    <string name="pin_squat">Przysiad na piny</string>
    <string name="goblet_squat">Przysiad - goblet</string>
    <string name="deadlift_deficyt">Martwy ciąg deficytowy</string>
    <string name="deadlift_rack">Martwy ciąg - rack</string>
    <string name="bench_paused">Płaska pauzowana</string>
    <string name="bench_biacromical">Płaska biakromiczna</string>
    <string name="bench_touch_and_go"><![CDATA[Płaska - touch&go]]></string>
    <string name="bench_incline">Płaska na skosie dodatnim</string>
    <string name="bench_decline">Płaska na skosie ujemnym</string>
    <string name="rows">Wiosło</string>
    <string name="db_rows">Wiosło hantlą</string>
    <string name="pull_up">Podciąganie nachwytem</string>
    <string name="chin_up">Podciąganie podchwytem</string>
    <string name="neutral_grip_pull_up">Podciąganie chwytem młotkowym</string>
    <string name="bb_biceps_curl">Uginanie ramion sztangą</string>
    <string name="db_biceps_curl">Uginanie ramion hantlą</string>
    <string name="db_hammer_biceps_curl">Uginanie ramion chwytem młotkowym</string>
    <string name="skull_crushers">Skull crushers</string>
    <string name="dips">Dips</string>
    <string name="hercules">Herkulesy</string>
    <string name="rope_curl">Uginianie linką</string>
    <string name="rope_extension">Prostowanie ramion linką</string>
    <string name="reps_hint">Powtórzenia</string>
    <string name="sets_hint">Serie</string>
    <string name="intensity_hint">Intensywność</string>
    <string name="edit">Edytuj</string>
    <string name="what_do_you_want_to_do">Co chcesz zrobić?</string>
    <string name="delete">Usuń</string>
    <string name="deleted">Usunięto</string>
    <string name="set_decrement">Zmniejsz liczbę wykonanych serii</string>
    <string name="set_done">Zwiększ liczbę wykonanych serii</string>
    <string name="over_head_press">Wyciskanie żołnierskie</string>
    <string name="glute_ham_raise">Żuraw</string>
    <string name="back_extension">Prostowanie na ławce rzymskiej</string>
    <string name="power_clean">Zarzut na wysoko</string>
    <string name="clean">Zarzut</string>
    <string name="power_snatch">Rwanie na wysoko</string>
    <string name="snatch">Rwanie</string>
    <string name="plan5_3_1">5/3/1</string>
    <string name="jim_wendler">autor: Jim Wendler</string>
    <string name="description_5_3_1">Plan nastawiony na rozwój siły trwający w zależności od liczby dni treningowych (3 lub 4 dni) od 4 do 6 tygodni.</string>
    <string name="add_to_your_training_diary">Dodaj do swojego dziennika</string>
    <string name="texas_method">Texas method</string>
    <string name="description_texas_method">Plan z tygodniową progresją liniową. W ciągu jednego tygodnia zakłada trzy treningi: z wysoką intensywnością, aktywny wypoczynek oraz z wysoką objętością.</string>
    <string name="mark_rippetoe">autor: Mark Rippetoe</string>
    <string name="strong_lifts_5_5">Strong Lifts 5x5</string>
    <string name="bill_starr">autor: Bill Starr</string>
    <string name="description_strong_lifts_5_5">Plan dla osób początkującyhc zakładający trzy treningi w tygodniu z prostą progresją liniową. Ograniczony do podstawowych ćwiczeń wielostawowych.</string>
    <string name="select_and_add_plan">Wybierz nowy plan i dodaj do dziennika</string>
    <string name="add_predefined_plan_title">Czy dodać plan do Twojego dziennika treningowego?</string>
    <string name="add_predefined_plan_message">Jeśli chcesz dodać plan do swojego dziennika treningowego, naciśnij \"Zatwierdź\" i wybierz datę rozpoczęcia programu.</string>
    <string name="weight_hint">Ciężar</string>
    <string name="comment_hint">Komentarz</string>
    <string name="intensity_in_listview">%1RM:</string>
    <string name="comment">komentarz:</string>
    <string name="stats_header">Twoje statystyki</string>
    <string name="volume">Objętość</string>
    <string name="todays_training">Dzisiejszy trening</string>
    <string name="todays_exercises">Dzisiejsze ćwiczenia</string>
    <string name="kg">[kg]</string>
</resources>
