<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_want_to_do"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:background="@drawable/border_bottom_grey"
        android:paddingBottom="5dp"
        />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textAlignment="center"
        android:background="@drawable/border_bottom_grey"
        android:paddingBottom="5dp"
        />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textAlignment="center"
        android:background="@drawable/border_bottom_grey"
        android:paddingBottom="5dp"
        />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:background="@drawable/border_bottom_grey"
        android:paddingBottom="5dp"
        />


</LinearLayout>