<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <TextView
        android:id="@+id/messageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_plan"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/planNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="text"
        android:hint="@string/plan_name"
        android:textAlignment="center"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cancelButtonDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/cancel"
            android:layout_margin="8dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/confirmButtonDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/confirm"
            android:layout_margin="8dp"
            android:textColor="@color/link"/>

    </RelativeLayout>

</LinearLayout>