<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="80dp"
        android:paddingTop="80dp"
        android:paddingRight="80dp">

        <ImageView
            android:id="@+id/logoLogoutPage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"
            android:src="@drawable/bar_icon" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logoutConfirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_rounded_gray"
            android:text="@string/log_out" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logoutCancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_rounded"
            android:text="@string/cancel" />


    </LinearLayout>

</RelativeLayout>