<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border_bottom">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profileTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/backIcon"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:contentDescription="@string/back"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@+id/backIcon"
                    android:layout_toRightOf="@+id/backIcon"
                    android:text="@string/edit_profile"
                    android:textColor="@color/black"
                    android:textSize="15sp" />



                <ImageView
                    android:id="@+id/saveIcon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:contentDescription="@string/save"
                    android:src="@drawable/icon_save" />


            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


</merge>